# AndroML

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  release-please-config.json  settings.gradle.kts
.github/workflows/: ci.yml  release-please.yml  release.yml  security.yml
api/server/: build.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
cluster/core/: build.gradle.kts
cluster/transport/: build.gradle.kts
core/agents/: build.gradle.kts
core/api/: build.gradle.kts
core/database/: build.gradle.kts
core/device/: build.gradle.kts
core/files/: build.gradle.kts
core/model/: build.gradle.kts
core/network/: build.gradle.kts
core/rag/: build.gradle.kts
core/security/: build.gradle.kts
core/tools/: build.gradle.kts
core/workflow/: build.gradle.kts
docs/api/: openapi.yaml
docs/architecture/: data-flow.md  threat-model.md
docs/decisions/: 0001-distributed-peer-execution.md
docs/publishing/: test-release-policy.md
gradle/: libs.versions.toml
optimizer/: build.gradle.kts
runtime/api/: build.gradle.kts
runtime/executorch/: build.gradle.kts
runtime/litert/: build.gradle.kts
runtime/litertlm/: build.gradle.kts
runtime/llamacpp/: README.md  build.gradle.kts  proguard-rules.pro
runtime/llamacpp/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
runtime/onnx/: build.gradle.kts
runtime/service/: build.gradle.kts
scripts/: build-test-release.sh  package-test-release.sh  prepare-llama-cpp.sh  verify-all.sh  verify-release-config.sh  verify-test-release.sh
(+186 files in other folders)
